# advent-of-code-solutions

./: .gitignore  LICENSE  README.md
2023/golang/: go.mod  go.sum  main.go  test.org
2023/rust/: Cargo.toml  flake.nix
2023/rust/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
2023/rust/.direnv/flake-inputs/: 833ac52hqpxhmqwp5bvdf0pghvvx998d-source  hr5aswl3nqh2j1mb4khr3pqm0pc3d5sr-source
2023/rust/src/: main.rs
